# SuperCode_w1

./: .gitignore  __layout.svelte  build_output.txt  index.html  main.py  package-lock.json  package.json  pyproject.toml  rollup.config.js  svelte.config.js  webpack.config.js
css/: index.css
js/: index.js
public/: index.html
src/: App.svelte  app.js  index.html  index.js  main.js
src/components/: Item.svelte
